--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.22.0",
     "prettier": "2.2.1"
+  },
+  "dependencies": {
+    "fontawesome-markers": "^4.6.1"
   }
 }
