--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,51 @@
-Flask
-Jinja2
-pdoc3
-pytest
+appdirs==1.4.4
+attrs==20.3.0
+autoflake==1.4
+autopep8==1.5.4
+bcrypt==3.2.0
+black==20.8b1
+blinker==1.4
+cffi==1.14.4
+click==7.1.2
+dnspython==2.1.0
+email-validator==1.1.2
+Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+flask-marshmallow==0.14.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+GeoAlchemy2==0.8.4
+idna==3.1
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Mako==1.1.4
+Markdown==3.3.3
+MarkupSafe==1.1.1
+marshmallow==3.10.0
+marshmallow-sqlalchemy==0.24.2
+mypy-extensions==0.4.3
+packaging==20.9
+pathspec==0.8.1
+pdoc3==0.9.2
+Pillow==8.1.0
+pluggy==0.13.1
+py==1.10.0
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+pyparsing==2.4.7
+pytest==6.2.2
+regex==2020.11.13
+Shapely==1.7.1
+six==1.15.0
+SQLAlchemy==1.3.23
+SQLAlchemy-serializer==1.3.4.4
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+Werkzeug==1.0.1
+wtf==0.1
+WTForms==2.3.3
